--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -7,8 +7,8 @@ body
   :padding 2em
   :margin 0
     :top 33px
-  :background-color $background
-a
+
+//a
   :color $blue
   :text
     :decoration none
@@ -17,10 +17,10 @@ a
     :text
       :decoration underline
 
-p
+//p
   :word-wrap break-word
 
-h1
+//h1
   :color #333
   :position relative
   :font
@@ -28,15 +28,15 @@ h1
   :letter
     :spacing -1px
 
-h1, h2, h3, h4
+//h1, h2, h3, h4
   :margin
     :bottom 5px
 
-  small
+//  small
     :font-size small
     :color #999
 
-h1
+//h1
   :color #111
 
 ul > li
@@ -45,7 +45,7 @@ ul > li
 .content ul li
   :list-style disc
 
-form
+//form
   :position relative
   input,
   textarea,
@@ -868,7 +868,7 @@ form p.checkbox_select
     :position relative
     :top 6px
 
-label
+//label
   :font
     :weight normal
   :color #999
@@ -1382,7 +1382,7 @@ h2,h3,h4
       :size 80%
       :weight 200
 
-input[type="search"]
+//input[type="search"]
   :-webkit-appearance textfield
   :-moz-appearance textfield
 
