--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,8 +19,9 @@
 
     / Social Media Icons are by Paul Robert Lloyd @ http://paulrobertlloyd.com/2009/06/social_media_icons
 
-    = stylesheet_link_tag "blueprint/screen", :media => 'screen'
-    = stylesheet_link_tag "blueprint/print", :media => 'print'
+    /= stylesheet_link_tag "blueprint/screen", :media => 'screen'
+    /= stylesheet_link_tag "blueprint/print", :media => 'print'
+    = stylesheet_link_tag "http://twitter.github.com/bootstrap/1.3.0/bootstrap.min.css"
 
     = stylesheet_link_tag "login", :media => 'screen'
 
